--- a/CSS/Pagestyle.css
+++ b/CSS/Pagestyle.css
@@ -1,12 +1,30 @@
-/* Center the content of the page and leave 10% margin on both sides */
+html {
+    overflow: hidden;
+}
+
+::-webkit-scrollbar {
+    width: 0px;
+    background: transparent; /* make scrollbar transparent */
+}
+
 .container {
+    /* Center the content of the container and leave 10% margin on both sides */
     margin: auto;
     width: 80%;
     position: relative;
 }
 
+.snap-scroll-container {
+    /* Allows Content inside Container to snap Scroll */
+    overflow-y: scroll;
+    overflow-x: hidden;
+    scroll-snap-type: y mandatory; /* Enable snap scrolling on y-axis */
+    max-height: 100vh;  /* Sets container height to 100% of viewport height (vh) */
+}
+
 #boxContainer {
-    border: solid black;
+    /* boxContainer is used as "FlexBox", making it easier to sort content within */
+    border: solid rgb(255, 0, 0);
     display: flex;
     gap: 10px;
     /* Center content inside boxContainer horizontally */
@@ -20,6 +38,7 @@
 }
 
 .box {
+    /* Creates a square box with 200px per side to use within the boxContainer*/
     display: flex;
     justify-content: center;
     align-items: center;
@@ -28,4 +47,19 @@
     background-color: black;
     color: white;
     font-size: 40pt;
+}
+
+.imageBox {
+    /* Creates a Box for images with a width of 65% of the boxContainer and central alignment */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 65%;
+    object-fit: cover;
+    border-radius: var(boxContainer);
+}
+
+.snap-scroll-section {
+    scroll-snap-align: center; /* Snap each section to the start */
+    height: 95vh;
 }
