--- a/CSS/Searchbar.css
+++ b/CSS/Searchbar.css
@@ -1,7 +1,9 @@
-/* Add a black background color to the top navigation bar */
+/* Add a background color and 10% margins to the left and right of the top navigation bar */
 .topnav {
     overflow: hidden;
     background-color: #e9e9e9;
+    margin-left: 10%;
+    margin-right: 10%;
 }
 
 /* Style the links inside the navigation bar */
