--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 :root {                                 /* Adds variables to be used in other stylings */
-    --navbar-height: 172px;
+    --navbar-height: 200px;
     --available-height: calc(100vh - var(--navbar-height));
 }
 
@@ -49,12 +49,12 @@ html, body {
     font-size: 18px;
 }
 
-.topnav a:hover, .dropdown:hover {                       /* Change background-colour on hover */
+.topnav a:hover, .dropdown:hover {      /* Change background-colour on hover */
     background-color: #ddd;
     color: black;
 }
 
-.topnav a.active, .active-dropdown {                      /* Style the "active" element to highlight the current page */
+.topnav a.active {                      /* Style the "active" element to highlight the current page */
     background-color: #2196f3;        /* Background-Colour of the box */
     color: white;                     /* Text colour inside the box */
 }
@@ -146,6 +146,20 @@ h2 {
     line-height: 2.2rem;
 }
 
+h3 {
+    margin: auto;
+    margin-top: 1rem;
+    font-size: 1.6rem;
+    line-height: 2rem;
+}
+
+h4 {
+    margin: auto;
+    margin-top: 1rem;
+    font-size: 1.4rem;
+    line-height: 1.8rem;
+}
+
 p {
     margin: auto;
     font-size: 1.2rem;
@@ -219,6 +233,38 @@ p {
     background-color: #f1f1f1;
 }
 
+.tab {                                  /* Style the tab */
+    overflow: hidden;
+    border: 1px solid #ccc;
+    background-color: #f1f1f1;
+  }
+  
+.tab button {                           /* Style the buttons that are used to open the tab content */
+    background-color: inherit;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    font-size: 1.2rem;
+    transition: 0.3s;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+  
+.tab button:hover {                     /* Change background color of buttons on hover */
+    background-color: #ddd;
+}
+  
+.tab button.active {                    /* Create an active/current tablink class */
+    background-color: #ccc;
+}
+  
+.tabcontent {                           /* Style the tab content */
+    display: none;
+    padding: 6px 12px;
+    border: 1px solid #ccc;
+    border-top: none;
+}
 
 @media screen and (max-width: 650px) {  /* Changes style settings if screen size is reduced */
     .text-image-container{
